[BAZEL] initial SDK build implementation

--- a/project/BUILD.bazel
+++ b/project/BUILD.bazel
@@ -1,16 +1,130 @@
 # project/BUILD.bazel
 
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("@rules_cc//cc:defs.bzl", "cc_binary")
 
 cc_library(
-    name = "project",
-    srcs = glob([
-        "source/*.c",
-        "source/*.cpp",
-    ]),
-    hdrs = glob(["includes/*.h"]),
+    name = "startup",
+    srcs = ["@nrf_sdk//:modules/nrfx/mdk/gcc_startup_nrf52833.S"],
     copts = [
-        "-ffreestanding",
+        "-g3",
+        "-mcpu=cortex-m4",
+        "-mthumb -mabi=aapcs",
+        "-mfloat-abi=hard -mfpu=fpv4-sp-d16",
     ],
-    includes = ["includes"],
+    linkstatic = 1,
+    local_defines = [
+        "APP_TIMER_V2",
+        "APP_TIMER_V2_RTC1_ENABLED",
+        "BOARD_PCA10040",
+        "CONFIG_GPIO_AS_PINRESET",
+        "FLOAT_ABI_HARD",
+        "NRF52",
+        "NRF52833_XXAA",
+        "NRF52_PAN_74",
+        "__HEAP_SIZE=8192",
+        "__STACK_SIZE=8192",
+    ],
+    alwayslink = 1,
+)
+
+cc_binary(
+    name = "project",
+    srcs = [
+        "source/main.c",
+        "@nrf_sdk//:components/boards/boards.c",
+        "@nrf_sdk//:components/drivers_nrf/nrf_soc_nosd/nrf_nvic.c",
+        "@nrf_sdk//:components/drivers_nrf/nrf_soc_nosd/nrf_soc.c",
+        "@nrf_sdk//:components/libraries/atomic/nrf_atomic.c",
+        "@nrf_sdk//:components/libraries/atomic_fifo/nrf_atfifo.c",
+        "@nrf_sdk//:components/libraries/balloc/nrf_balloc.c",
+        "@nrf_sdk//:components/libraries/bsp/bsp.c",
+        "@nrf_sdk//:components/libraries/bsp/bsp_nfc.c",
+        "@nrf_sdk//:components/libraries/button/app_button.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_rtt.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_serial.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_uart.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_default_backends.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_frontend.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_str_formatter.c",
+        "@nrf_sdk//:components/libraries/memobj/nrf_memobj.c",
+        "@nrf_sdk//:components/libraries/ringbuf/nrf_ringbuf.c",
+        "@nrf_sdk//:components/libraries/scheduler/app_scheduler.c",
+        "@nrf_sdk//:components/libraries/sortlist/nrf_sortlist.c",
+        "@nrf_sdk//:components/libraries/strerror/nrf_strerror.c",
+        "@nrf_sdk//:components/libraries/timer/app_timer2.c",
+        "@nrf_sdk//:components/libraries/timer/drv_rtc.c",
+        "@nrf_sdk//:components/libraries/util/app_error.c",
+        "@nrf_sdk//:components/libraries/util/app_error_handler_gcc.c",
+        "@nrf_sdk//:components/libraries/util/app_error_weak.c",
+        "@nrf_sdk//:components/libraries/util/app_util_platform.c",
+        "@nrf_sdk//:components/libraries/util/nrf_assert.c",
+        "@nrf_sdk//:external/fprintf/nrf_fprintf.c",
+        "@nrf_sdk//:external/fprintf/nrf_fprintf_format.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT_printf.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_clock.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_uart.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_clock.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_gpiote.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_uart.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_uarte.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/prs/nrfx_prs.c",
+        "@nrf_sdk//:modules/nrfx/mdk/system_nrf52833.c",
+        "@nrf_sdk//:modules/nrfx/soc/nrfx_atomic.c",
+    ],
+    copts = [
+        "-O3",
+        "-g3",
+        "-mcpu=cortex-m4",
+        "-mthumb -mabi=aapcs",
+        "-Wall -Werror",
+        "-mfloat-abi=hard -mfpu=fpv4-sp-d16",
+        "-ffunction-sections -fdata-sections -fno-strict-aliasing",
+        "-fno-builtin -fshort-enums",
+    ],
+    linkopts = [
+        "-O3 -g3",
+        "-mthumb -mabi=aapcs",
+        "-T$(location :config/linker.ld)",
+        "-mcpu=cortex-m4",
+        "-mfloat-abi=hard -mfpu=fpv4-sp-d16",
+        "-Wl,--gc-sections",
+        "--specs=nano.specs",
+        "-lc -lnosys -lm",
+    ],
+    local_defines = [
+        "APP_TIMER_V2",
+        "APP_TIMER_V2_RTC1_ENABLED",
+        "BOARD_PCA10040",
+        "CONFIG_GPIO_AS_PINRESET",
+        "FLOAT_ABI_HARD",
+        "NRF52",
+        "NRF52832_XXAA",
+        "NRF52_PAN_74",
+        "__HEAP_SIZE=8192",
+        "__STACK_SIZE=8192",
+    ],
+    deps = [
+        ":config/linker.ld",
+        ":startup",
+        "//sdk:config",
+        "@nrf_sdk//:hdrs",
+    ],
+)
+
+genrule(
+    name = "bin",
+    srcs = [":project"],
+    outs = ["project.bin"],
+    cmd = "$(location @arm-none-eabi-darwin//:objcopy) -O binary $< $@",
+    tools = ["@arm-none-eabi-darwin//:objcopy"],
+)
+
+genrule(
+    name = "hex",
+    srcs = [":project"],
+    outs = ["project.hex"],
+    cmd = "$(location @arm-none-eabi-darwin//:objcopy) -O ihex $< $@",
+    tools = ["@arm-none-eabi-darwin//:objcopy"],
 )
