--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  
+
   test:
     name: build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -18,4 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build project
-        run: bazelisk build project
+        run: |
+          bazelisk build project
+          bazelisk build project:bin
+          bazelisk build project:hex
