--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -15,6 +15,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: build project
         run: |
-          bazelisk build project
-          bazelisk build project:bin
-          bazelisk build project:hex
+          bazelisk build project:all
