--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,8 @@
 # .bazelrc
 
-# Target arm-none-eabi toolchain for target builds.
-build --crosstool_top=@arm_none_eabi//toolchain
+build --incompatible_enable_cc_toolchain_resolution
+build --platforms=@arm_none_eabi//platforms:arm_none_eabi_generic
 
-# Target the default cpp compiler for host builds.
-build --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+# Legacy build options.
+build:legacy --crosstool_top=@arm_none_eabi//toolchain
+build:legacy --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
