[BAZEL] cleaned WORKSPACE

--- a/platforms/BUILD
+++ b/platforms/BUILD
@@ -4,6 +4,6 @@ platform(
     name = "nRF52832",
     constraint_values = [],
     parents = [
-        "@arm_none_eabi//platforms:arm_none_eabi_generic",
+        "@arm_none_eabi//platforms:arm_none_generic",
     ],
 )
