--- a/.bazelrc
+++ b/.bazelrc
@@ -1,8 +1,4 @@
 # .bazelrc
 
+# Enable toolchain resolution
 build --incompatible_enable_cc_toolchain_resolution
-build --platforms=//platforms:nRF52832
-
-# Legacy build options.
-build:legacy --crosstool_top=@arm_none_eabi//toolchain
-build:legacy --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
