--- a/platforms/BUILD
+++ b/platforms/BUILD
@@ -5,7 +5,7 @@ package(default_visibility = ["//visibility:public"])
 platform(
     name = "pca10040",
     constraint_values = [
-        "//boards:pca10040",
+        "@nRF5//boards:pca10040",
     ],
     parents = [
         "@arm_none_eabi//platforms:arm_none_generic",
@@ -15,7 +15,7 @@ platform(
 platform(
     name = "pca10056",
     constraint_values = [
-        "//boards:pca10056",
+        "@nRF5//boards:pca10056",
     ],
     parents = [
         "@arm_none_eabi//platforms:arm_none_generic",
@@ -25,7 +25,7 @@ platform(
 platform(
     name = "pca10100",
     constraint_values = [
-        "//boards:pca10100",
+        "@nRF5//boards:pca10100",
     ],
     parents = [
         "@arm_none_eabi//platforms:arm_none_generic",
