--- a/config/BUILD
+++ b/config/BUILD
@@ -5,20 +5,20 @@ package(default_visibility = ["//visibility:public"])
 config_setting(
     name = "pca10040",
     values = {
-        "platforms": "//platforms:pca10040",
+        "platforms": "@nRF5//platforms:pca10040",
     },
 )
 
 config_setting(
     name = "pca10056",
     values = {
-        "platforms": "//platforms:pca10056",
+        "platforms": "@nRF5//platforms:pca10056",
     },
 )
 
 config_setting(
     name = "pca10100",
     values = {
-        "platforms": "//platforms:pca10100",
+        "platforms": "@nRF5//platforms:pca10100",
     },
 )
