--- a/examples/BUILD
+++ b/examples/BUILD
@@ -5,6 +5,6 @@ package(default_visibility = ["//visibility:public"])
 filegroup(
     name = "examples",
     srcs = [
-        "//examples/nfc",
+        "@nRF5//examples/nfc",
     ],
 )
