[BAZEL] fixed board configs

--- a/boards/BUILD
+++ b/boards/BUILD
@@ -18,3 +18,24 @@ constraint_value(
     name = "pca10100",
     constraint_setting = ":board",
 )
+
+config_setting(
+    name = "is_pca10040",
+    constraint_values = [
+        ":pca10040",
+    ],
+)
+
+config_setting(
+    name = "is_pca10056",
+    constraint_values = [
+        ":pca10056",
+    ],
+)
+
+config_setting(
+    name = "is_pca10100",
+    constraint_values = [
+        ":pca10100",
+    ],
+)
