[NRF] add usb_audio example

--- a/platforms/BUILD
+++ b/platforms/BUILD
@@ -6,9 +6,8 @@ platform(
     name = "pca10040",
     constraint_values = [
         "@nRF5//boards:pca10040",
-    ],
-    parents = [
-        "@arm_none_eabi//platforms:arm_none_generic",
+        "@platforms//cpu:arm",
+        "@platforms//os:none",
     ],
 )
 
@@ -16,9 +15,8 @@ platform(
     name = "pca10056",
     constraint_values = [
         "@nRF5//boards:pca10056",
-    ],
-    parents = [
-        "@arm_none_eabi//platforms:arm_none_generic",
+        "@platforms//cpu:arm",
+        "@platforms//os:none",
     ],
 )
 
@@ -26,8 +24,7 @@ platform(
     name = "pca10100",
     constraint_values = [
         "@nRF5//boards:pca10100",
-    ],
-    parents = [
-        "@arm_none_eabi//platforms:arm_none_generic",
+        "@platforms//cpu:arm",
+        "@platforms//os:none",
     ],
 )
