--- a/examples/nfc/wake_on_nfc/BUILD
+++ b/examples/nfc/wake_on_nfc/BUILD
@@ -43,6 +43,46 @@ nrf_binary(
     srcs = board_sources + [
         "source/main.c",
         "config/sdk_config.h",
+        "@nrf_sdk//:components/boards/boards.c",
+        "@nrf_sdk//:components/drivers_nrf/nrf_soc_nosd/nrf_nvic.c",
+        "@nrf_sdk//:components/drivers_nrf/nrf_soc_nosd/nrf_soc.c",
+        "@nrf_sdk//:components/libraries/atomic/nrf_atomic.c",
+        "@nrf_sdk//:components/libraries/atomic_fifo/nrf_atfifo.c",
+        "@nrf_sdk//:components/libraries/balloc/nrf_balloc.c",
+        "@nrf_sdk//:components/libraries/bsp/bsp.c",
+        "@nrf_sdk//:components/libraries/bsp/bsp_nfc.c",
+        "@nrf_sdk//:components/libraries/button/app_button.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_rtt.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_serial.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_uart.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_default_backends.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_frontend.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_str_formatter.c",
+        "@nrf_sdk//:components/libraries/memobj/nrf_memobj.c",
+        "@nrf_sdk//:components/libraries/ringbuf/nrf_ringbuf.c",
+        "@nrf_sdk//:components/libraries/scheduler/app_scheduler.c",
+        "@nrf_sdk//:components/libraries/sortlist/nrf_sortlist.c",
+        "@nrf_sdk//:components/libraries/strerror/nrf_strerror.c",
+        "@nrf_sdk//:components/libraries/timer/app_timer2.c",
+        "@nrf_sdk//:components/libraries/timer/drv_rtc.c",
+        "@nrf_sdk//:components/libraries/util/app_error.c",
+        "@nrf_sdk//:components/libraries/util/app_error_handler_gcc.c",
+        "@nrf_sdk//:components/libraries/util/app_error_weak.c",
+        "@nrf_sdk//:components/libraries/util/app_util_platform.c",
+        "@nrf_sdk//:components/libraries/util/nrf_assert.c",
+        "@nrf_sdk//:external/fprintf/nrf_fprintf.c",
+        "@nrf_sdk//:external/fprintf/nrf_fprintf_format.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT_printf.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_clock.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_uart.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_clock.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_gpiote.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_uart.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_uarte.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/prs/nrfx_prs.c",
+        "@nrf_sdk//:modules/nrfx/soc/nrfx_atomic.c",
     ],
     copts = [
         "-O3",
@@ -57,7 +97,7 @@ nrf_binary(
     includes = [
         "config",
     ],
-    linker = ":config/linker.ld",
+    linker = ":linker.ld",
     linkopts = [
         "-O3 -g3",
         "-mthumb -mabi=aapcs",
@@ -74,78 +114,6 @@ nrf_binary(
         "FLOAT_ABI_HARD",
         "__HEAP_SIZE=8192",
         "__STACK_SIZE=8192",
-    ],
-    sdk_includes = [
-        "components",
-        "components/boards",
-        "components/drivers_nrf/nrf_soc_nosd",
-        "components/libraries/atomic",
-        "components/libraries/atomic_fifo",
-        "components/libraries/balloc",
-        "components/libraries/bsp",
-        "components/libraries/button",
-        "components/libraries/delay",
-        "components/libraries/experimental_section_vars",
-        "components/libraries/log",
-        "components/libraries/log/src",
-        "components/libraries/memobj",
-        "components/libraries/ringbuf",
-        "components/libraries/scheduler",
-        "components/libraries/sortlist",
-        "components/libraries/strerror",
-        "components/libraries/timer",
-        "components/libraries/util",
-        "components/toolchain/cmsis/include",
-        "external/fprintf",
-        "external/segger_rtt",
-        "integration/nrfx",
-        "integration/nrfx/legacy",
-        "modules/nrfx",
-        "modules/nrfx/drivers/include",
-        "modules/nrfx/hal",
-        "modules/nrfx/mdk",
-    ],
-    sdk_srcs = [
-        "components/boards/boards.c",
-        "components/drivers_nrf/nrf_soc_nosd/nrf_nvic.c",
-        "components/drivers_nrf/nrf_soc_nosd/nrf_soc.c",
-        "components/libraries/atomic/nrf_atomic.c",
-        "components/libraries/atomic_fifo/nrf_atfifo.c",
-        "components/libraries/balloc/nrf_balloc.c",
-        "components/libraries/bsp/bsp.c",
-        "components/libraries/bsp/bsp_nfc.c",
-        "components/libraries/button/app_button.c",
-        "components/libraries/log/src/nrf_log_backend_rtt.c",
-        "components/libraries/log/src/nrf_log_backend_serial.c",
-        "components/libraries/log/src/nrf_log_backend_uart.c",
-        "components/libraries/log/src/nrf_log_default_backends.c",
-        "components/libraries/log/src/nrf_log_frontend.c",
-        "components/libraries/log/src/nrf_log_str_formatter.c",
-        "components/libraries/memobj/nrf_memobj.c",
-        "components/libraries/ringbuf/nrf_ringbuf.c",
-        "components/libraries/scheduler/app_scheduler.c",
-        "components/libraries/sortlist/nrf_sortlist.c",
-        "components/libraries/strerror/nrf_strerror.c",
-        "components/libraries/timer/app_timer2.c",
-        "components/libraries/timer/drv_rtc.c",
-        "components/libraries/util/app_error.c",
-        "components/libraries/util/app_error_handler_gcc.c",
-        "components/libraries/util/app_error_weak.c",
-        "components/libraries/util/app_util_platform.c",
-        "components/libraries/util/nrf_assert.c",
-        "external/fprintf/nrf_fprintf.c",
-        "external/fprintf/nrf_fprintf_format.c",
-        "external/segger_rtt/SEGGER_RTT.c",
-        "external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c",
-        "external/segger_rtt/SEGGER_RTT_printf.c",
-        "integration/nrfx/legacy/nrf_drv_clock.c",
-        "integration/nrfx/legacy/nrf_drv_uart.c",
-        "modules/nrfx/drivers/src/nrfx_clock.c",
-        "modules/nrfx/drivers/src/nrfx_gpiote.c",
-        "modules/nrfx/drivers/src/nrfx_uart.c",
-        "modules/nrfx/drivers/src/nrfx_uarte.c",
-        "modules/nrfx/drivers/src/prs/nrfx_prs.c",
-        "modules/nrfx/soc/nrfx_atomic.c",
     ],
     target_compatible_with = [
         "@platforms//cpu:arm",
