--- a/examples/peripheral/usb_audio/BUILD
+++ b/examples/peripheral/usb_audio/BUILD
@@ -25,6 +25,58 @@ nrf_binary(
     srcs = board_sources + [
         "source/main.c",
         "config/sdk_config.h",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_rtt.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_serial.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_backend_uart.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_default_backends.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_frontend.c",
+        "@nrf_sdk//:components/libraries/log/src/nrf_log_str_formatter.c",
+        "@nrf_sdk//:components/boards/boards.c",
+        "@nrf_sdk//:components/libraries/button/app_button.c",
+        "@nrf_sdk//:components/libraries/util/app_error.c",
+        "@nrf_sdk//:components/libraries/util/app_error_handler_gcc.c",
+        "@nrf_sdk//:components/libraries/util/app_error_weak.c",
+        "@nrf_sdk//:components/libraries/fifo/app_fifo.c",
+        "@nrf_sdk//:components/libraries/scheduler/app_scheduler.c",
+        "@nrf_sdk//:components/libraries/timer/app_timer2.c",
+        "@nrf_sdk//:components/libraries/uart/app_uart_fifo.c",
+        "@nrf_sdk//:components/libraries/usbd/app_usbd.c",
+        "@nrf_sdk//:components/libraries/usbd/class/audio/app_usbd_audio.c",
+        "@nrf_sdk//:components/libraries/usbd/app_usbd_core.c",
+        "@nrf_sdk//:components/libraries/usbd/app_usbd_string_desc.c",
+        "@nrf_sdk//:components/libraries/util/app_util_platform.c",
+        "@nrf_sdk//:components/libraries/timer/drv_rtc.c",
+        "@nrf_sdk//:components/libraries/hardfault/nrf52/handler/hardfault_handler_gcc.c",
+        "@nrf_sdk//:components/libraries/hardfault/hardfault_implementation.c",
+        "@nrf_sdk//:components/libraries/util/nrf_assert.c",
+        "@nrf_sdk//:components/libraries/atomic_fifo/nrf_atfifo.c",
+        "@nrf_sdk//:components/libraries/atomic/nrf_atomic.c",
+        "@nrf_sdk//:components/libraries/balloc/nrf_balloc.c",
+        "@nrf_sdk//:external/fprintf/nrf_fprintf.c",
+        "@nrf_sdk//:external/fprintf/nrf_fprintf_format.c",
+        "@nrf_sdk//:components/libraries/memobj/nrf_memobj.c",
+        "@nrf_sdk//:components/libraries/ringbuf/nrf_ringbuf.c",
+        "@nrf_sdk//:components/libraries/sortlist/nrf_sortlist.c",
+        "@nrf_sdk//:components/libraries/strerror/nrf_strerror.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_clock.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_power.c",
+        "@nrf_sdk//:integration/nrfx/legacy/nrf_drv_uart.c",
+        "@nrf_sdk//:components/drivers_nrf/nrf_soc_nosd/nrf_nvic.c",
+        "@nrf_sdk//:components/drivers_nrf/nrf_soc_nosd/nrf_soc.c",
+        "@nrf_sdk//:modules/nrfx/soc/nrfx_atomic.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_clock.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_gpiote.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_power.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/prs/nrfx_prs.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_systick.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_uart.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_uarte.c",
+        "@nrf_sdk//:modules/nrfx/drivers/src/nrfx_usbd.c",
+        "@nrf_sdk//:components/libraries/bsp/bsp.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c",
+        "@nrf_sdk//:external/segger_rtt/SEGGER_RTT_printf.c",
+        "@nrf_sdk//:external/utf_converter/utf.c",
     ],
     copts = [
         "-O3",
@@ -36,10 +88,8 @@ nrf_binary(
         "-ffunction-sections -fdata-sections -fno-strict-aliasing",
         "-fno-builtin -fshort-enums",
     ],
-    includes = [
-        "config",
-    ],
-    linker = ":config/linker.ld",
+    includes = ["config"],
+    linker = ":linker.ld",
     linkopts = [
         "-O3 -g3",
         "-mthumb -mabi=aapcs",
@@ -56,97 +106,6 @@ nrf_binary(
         "FLOAT_ABI_HARD",
         "__HEAP_SIZE=8192",
         "__STACK_SIZE=8192",
-    ],
-    sdk_includes = [
-        "components",
-        "modules/nrfx/mdk",
-        "components/libraries/scheduler",
-        "components/libraries/timer",
-        "components/libraries/fifo",
-        "components/boards",
-        "components/libraries/strerror",
-        "components/toolchain/cmsis/include",
-        "components/libraries/util",
-        "components/libraries/bsp",
-        "components/libraries/usbd/class/audio",
-        "components/libraries/balloc",
-        "components/libraries/ringbuf",
-        "components/libraries/hardfault/nrf52",
-        "modules/nrfx/hal",
-        "components/libraries/hardfault",
-        "components/libraries/uart",
-        "components/libraries/log",
-        "components/libraries/button",
-        "modules/nrfx",
-        "components/libraries/experimental_section_vars",
-        "integration/nrfx/legacy",
-        "components/libraries/usbd",
-        "components/libraries/delay",
-        "external/segger_rtt",
-        "components/libraries/atomic_fifo",
-        "components/drivers_nrf/nrf_soc_nosd",
-        "components/libraries/atomic",
-        "components/libraries/sortlist",
-        "components/libraries/memobj",
-        "integration/nrfx",
-        "external/utf_converter",
-        "modules/nrfx/drivers/include",
-        "external/fprintf",
-        "components/libraries/log/src",
-    ],
-    sdk_srcs = [
-        "components/libraries/log/src/nrf_log_backend_rtt.c",
-        "components/libraries/log/src/nrf_log_backend_serial.c",
-        "components/libraries/log/src/nrf_log_backend_uart.c",
-        "components/libraries/log/src/nrf_log_default_backends.c",
-        "components/libraries/log/src/nrf_log_frontend.c",
-        "components/libraries/log/src/nrf_log_str_formatter.c",
-        "components/boards/boards.c",
-        "components/libraries/button/app_button.c",
-        "components/libraries/util/app_error.c",
-        "components/libraries/util/app_error_handler_gcc.c",
-        "components/libraries/util/app_error_weak.c",
-        "components/libraries/fifo/app_fifo.c",
-        "components/libraries/scheduler/app_scheduler.c",
-        "components/libraries/timer/app_timer2.c",
-        "components/libraries/uart/app_uart_fifo.c",
-        "components/libraries/usbd/app_usbd.c",
-        "components/libraries/usbd/class/audio/app_usbd_audio.c",
-        "components/libraries/usbd/app_usbd_core.c",
-        "components/libraries/usbd/app_usbd_string_desc.c",
-        "components/libraries/util/app_util_platform.c",
-        "components/libraries/timer/drv_rtc.c",
-        "components/libraries/hardfault/nrf52/handler/hardfault_handler_gcc.c",
-        "components/libraries/hardfault/hardfault_implementation.c",
-        "components/libraries/util/nrf_assert.c",
-        "components/libraries/atomic_fifo/nrf_atfifo.c",
-        "components/libraries/atomic/nrf_atomic.c",
-        "components/libraries/balloc/nrf_balloc.c",
-        "external/fprintf/nrf_fprintf.c",
-        "external/fprintf/nrf_fprintf_format.c",
-        "components/libraries/memobj/nrf_memobj.c",
-        "components/libraries/ringbuf/nrf_ringbuf.c",
-        "components/libraries/sortlist/nrf_sortlist.c",
-        "components/libraries/strerror/nrf_strerror.c",
-        "integration/nrfx/legacy/nrf_drv_clock.c",
-        "integration/nrfx/legacy/nrf_drv_power.c",
-        "integration/nrfx/legacy/nrf_drv_uart.c",
-        "components/drivers_nrf/nrf_soc_nosd/nrf_nvic.c",
-        "components/drivers_nrf/nrf_soc_nosd/nrf_soc.c",
-        "modules/nrfx/soc/nrfx_atomic.c",
-        "modules/nrfx/drivers/src/nrfx_clock.c",
-        "modules/nrfx/drivers/src/nrfx_gpiote.c",
-        "modules/nrfx/drivers/src/nrfx_power.c",
-        "modules/nrfx/drivers/src/prs/nrfx_prs.c",
-        "modules/nrfx/drivers/src/nrfx_systick.c",
-        "modules/nrfx/drivers/src/nrfx_uart.c",
-        "modules/nrfx/drivers/src/nrfx_uarte.c",
-        "modules/nrfx/drivers/src/nrfx_usbd.c",
-        "components/libraries/bsp/bsp.c",
-        "external/segger_rtt/SEGGER_RTT.c",
-        "external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c",
-        "external/segger_rtt/SEGGER_RTT_printf.c",
-        "external/utf_converter/utf.c",
     ],
     target_compatible_with = [
         "@nRF5//boards:pca10056",
